[package]
name = "hyperbook"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
crc32fast = "1.3.2"
rust_decimal = { version = "1.25.0" }
futures-util = "0.3.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
url = "2.2.2"